# porn-cli

./: .gitignore  MANIFEST.in  README.md  disclaimer.org  pyproject.toml  requirements.txt  runner.py  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: python-publish.yml
porn_cli/: __main__.py
porn_cli/players/: mpv.py
porn_cli/utils/: dbs.py  httpclient.py  provider.py  scraper.py
porn_cli/websites/: hentaimama.py  javct.py  pornhub.py  xxxmax.py
porn_cli/websites/porn/: hentaimama.py  javct.py  pornhub.py  xxxmax.py
