[tool.poetry]
name = "porn-cli"
version = "1.0.3"
description = "An ani-cli like cli tool for movies and shows"
authors = ["Pain <painedposeidon444@gmail.com>"]
maintainers = ["Ananas <r3tr0ananas@hotmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "porn_cli"}]
repository = "https://github.com/mov-cli/porn-cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
porn-cli = "porn_cli.__main__:porncli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mov-cli/porn-cli/issues"
