[tool.poetry]
name = "porn-cli"
version = "1.0.3"
description = "An ani-cli like cli tool for porn"
authors = ["Pain <painedposeidon444@gmail.com>"]
maintainers = ["Ananas <ananas@r3tr0ananas.lol>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "porn_cli"}]
repository = "https://github.com/mov-cli/porn-cli"

[tool.poetry.dependencies]
python = "^3.9"
mov-cli = "^1.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
porn-cli = "porn_cli.__main__:porncli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mov-cli/porn-cli/issues"
